Development Portal (2016-12-01 shi)
==============================
Fixed sort icons for publisher countries view with crs column
Update alternative search view text


Development Portal (2016-11-30 shi)
==============================
Alternative search view added
Removed filters and country portals
Removed compare buttons
Updated css fixes
Removed search button
Updated translations
Added filters as option for search2
Begin on mobile-friendly fixes
SAVi display update


Development Portal (2016-11-29 shi)
==============================
Added search icon for DISCOVER
Updated text for search boxes
Remove {portal_name} for old instances


Development Portal (2016-11-28 shi)
==============================
Updated BETA badge style
Updated search button style
Added welcome text section for new DISCOVER
Updated welcome text section styles
Removed Generator link
Added DISCOVER filter header
Minor css changes
Cleaned up feedback link
Changed Recipient to Recipient Country
Add disabled state for search link
Update bottom text on search view
Updated hover state search_intro links
Moved stats to the top
Updated filter text
Updated declare stats line-height


Development Portal (2016-11-22 shi)
==============================
Added div for better alignment of iati-identifier in SAVi
Added links to participating-org with activity-id in SAVi
Updated Print-friendly with changes


Development Portal (2016-11-18 shi)
==============================
Fixed identifier section in SAVi for longer ids
Minor fixes for Firefox rendering
Updated Print-friendly version for SAVi
Added loading nanobar for Print-friendly


Development Portal (2016-11-17 shi)
==============================
Added feedback links for search section
Updated styles and font sizes for data descriptions
Added translations for new sections
Added dropmenu on search view
Fixed dropmenu width issues
Adjusted image brightness on search view
Added Generator banner to search view
Updated missing view header text