@@ -534,7 +534,7 @@ a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 	============================================= */
 .footer_wrap			{display:table-footer-group; height:1px; background-color:rgba(0,14,32,0.9);}
 .footer					{width:960px; margin:0 auto; padding:10px 0;}
-.footer_link			{display:inline-block; vertical-align:top; width:620px; color:#FFF; padding:60px 50px 0 0; box-sizing:border-box; font-size:18px; line-height:1.5em;}
+.footer_link			{display:inline-block;vertical-align:top;width:620px;color:#FFF;padding: 60px 50px 0 0;box-sizing:border-box;font-size:18px;line-height:1.5em;}
 .footer_link.list		{width:340px; padding:60px 0 30px 0;}
 .footer_link a			{font-size:1.0em; line-height:1.5em; color:#999;}
 .footer_link a:focus	{color:#999;}
@@ -543,7 +543,7 @@ a.data_invest:hover		{color:#FFF; background-color:rgba(194,0,255,0.8);}
 .footer_link a:hover	{color:#FFF;}
 .footer_link a:active	{color:#999;}
 .footer_link.about		{text-align:right;}
-.footer_link.top		{text-align:right; width:960px;}
+.footer_link.top		{text-align:right;width:960px;padding: 20px 50px 40px 0;}
 .footer_link ul			{padding-bottom:20px;}
 .footer_link p			{padding:15px 0;}
 .footer_link p.beta		{font-style:italic; color:#ccc;}
