@@ -1,3 +1,8 @@
+Development Portal (2016-12-02 shi)
+==============================
+Update fixes for inspire template
+
+
 Development Portal (2016-12-01 shi)
 ==============================
 Fixed sort icons for publisher countries view with crs column
